fixed font size on mobile phones

--- a/style.css
+++ b/style.css
@@ -64,3 +64,25 @@ align-self: center;
 .main1{
     display: none;
 }
+
+
+@media screen and (max-width: 750px) {
+    h1{
+        font-size: 6vw;
+    }
+    h4{
+        font-size: 4vw;
+    }
+    h2{
+        font-size: 5vw;
+    }
+    .player{
+        font-size: 5vw;
+    }
+    
+    #comment{
+       
+        font-size: 3.5vw;
+    }
+
+}
